opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/bignum"
bug-reports: "https://github.com/janestreet/bignum/issues"
dev-repo: "git+https://github.com/janestreet/bignum.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel"
  "ppx_jane"
  "typerep"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "num"
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
  "zarith"                  {>= "1.4"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Core-flavoured wrapper around zarith's arbitrary-precision rationals.
"
