opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bignum"
bug-reports: "https://github.com/janestreet/bignum/issues"
dev-repo: "git+https://github.com/janestreet/bignum.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bignum/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"             {>= "4.14.0"}
  "core"              {>= "v0.16" & < "v0.17"}
  "ppx_jane"          {>= "v0.16" & < "v0.17"}
  "splittable_random" {>= "v0.16" & < "v0.17"}
  "typerep"           {>= "v0.16" & < "v0.17"}
  "zarith_stubs_js"   {>= "v0.16" & < "v0.17"}
  "dune"              {>= "2.0.0"}
  "num"
  "zarith"            {>= "1.11"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Core-flavoured wrapper around zarith's arbitrary-precision rationals"
description: "
"
