opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bignum"
bug-reports: "https://github.com/janestreet/bignum/issues"
dev-repo: "git+https://github.com/janestreet/bignum.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bignum/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "ppx_stable_witness"
  "sexplib"
  "splittable_random"
  "typerep"
  "zarith_stubs_js"
  "dune"               {>= "3.17.0"}
  "num"
  "zarith"             {= "1.12+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Core-flavoured wrapper around zarith's arbitrary-precision rationals"
description: "
"
